[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loadfactors"
authors = [{name = "Connor Ferster", email = "connor@structuralpython.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy >= 1.24.3"
]

[project.urls]
Home = "https://github.com/StructuralPython/loadfactors_demo"

[project.optional-dependencies]
test = [
    "pytest >=7.3.1",
]